Fix horizontal scroll

--- a/components/hero/index.css
+++ b/components/hero/index.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   padding: 5rem 0 8rem;
   position: relative;
+  overflow: hidden;
   color: #fff;
   background-color: rgb(var(--color-blue));
   margin-bottom: 10vh;
